fixed alignments

--- a/real/src/About/index.css
+++ b/real/src/About/index.css
@@ -33,7 +33,7 @@ body{
         background-color: rgb(223, 189, 195);
         width: 270px;
         height: 110px;
-        margin-left: 2%;
+        margin-left: 1.7%;
         margin-bottom: 10%;
         
         
