--- a/real/src/Product/index.css
+++ b/real/src/Product/index.css
@@ -8,7 +8,7 @@
 
 }
 body{
-    background-color: rgb(223, 209, 209);
+    background-color: rgb(225, 165, 165);
 }
 .clothes{
     width: 500px;
@@ -58,6 +58,73 @@ top: 25px;
         font-size: 20px;
        /* position: relative; */
     top: 20px;
+    
+  
+
+}
+
+}
+
+
+
+@media (min-width: 250px) and (max-width: 535px){
+    .images{
+      
+
+        flex-direction: column;
+        justify-content: center;
+    
+        align-items: center;
+    
+    }
+    body{
+        background-color: rgb(223, 209, 209);
+    }
+    .clothes{
+        width: 250px;
+        height: 250px;
+        border-radius: 10px;
+        margin-top: 5%;
+
+    }
+
+    .heading h1{
+        text-align: center;
+        font-size: 20px;
+       /* position: relative; */
+    top: 20px;
+    
+  
+
+}
+
+}
+
+
+
+@media (min-width: 536px) and (max-width: 540px){
+    .images{
+        flex-direction: column;
+    
+    
+    
+    }
+    body{
+        background-color: rgb(223, 209, 209);
+    }
+    .clothes{
+        width: 350px;
+        height: 350px;
+        border-radius: 10px;
+        margin-top: 20%;
+        margin-left: 20%;
+
+    }
+
+    .heading h1{
+        font-size: 30px;
+        margin-left: 40%;
+        
     
   
 
